ISSTA-2023-AE/data/Evaluation/EVALUATION-VIA-CONTROLLED-EXPERIMENTS/Bug-finding-trails/grayc-conservative/gcc/set-4/fuzzer-file-38889.log
fuzzer-file-38889-2022-07-08-22:23:47.c: In function ‘main’:
fuzzer-file-38889-2022-07-08-22:23:47.c:32:1: error: non-trivial conversion in unary operation
   32 | main ()
      | ^~~~
unsigned long
ptr_t *
_9 = ~_13;
fuzzer-file-38889-2022-07-08-22:23:47.c:32:1: error: non-trivial conversion in unary operation
unsigned long
ptr_t *
_30 = ~_29;
during GIMPLE pass: vect
fuzzer-file-38889-2022-07-08-22:23:47.c:32:1: internal compiler error: verify_gimple failed
0xf6a8aa verify_gimple_in_cfg(function*, bool)
	.././../gcc-source/gcc/tree-cfg.cc:5561
0xe2903f execute_function_todo
	.././../gcc-source/gcc/passes.cc:2084
0xe29a03 do_per_function
	.././../gcc-source/gcc/passes.cc:1687
0xe29a03 execute_todo
	.././../gcc-source/gcc/passes.cc:2138
Please submit a full bug report, with preprocessed source (by using -freport-bug).
Please include the complete backtrace with any bug report.
See <https://gcc.gnu.org/bugs/> for instructions.
